k8s/500_mds-api-gateway-svc.yaml
# Database service.
apiVersion: v1
kind: Service
metadata:
  name: mds-api-gateway-svc-postgres-service
  labels:
    app: mds-api-gateway-svc-postgres-service
spec:
  ports:
    - port: 5432
  selector:
    app: mds-api-gateway-svc-postgres
---
# Database deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mds-api-gateway-svc-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mds-api-gateway-svc-postgres
  template:
    metadata:
      labels:
        app: mds-api-gateway-svc-postgres
    spec:
      containers:
        - name: mds-api-gateway-svc-postgres
          image: postgres:14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: mds-api-gateway-svc-postgres-pvc
---
# Redis service.
apiVersion: v1
kind: Service
metadata:
  name: mds-api-gateway-svc-redis-service
  labels:
    app: mds-api-gateway-svc-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: mds-api-gateway-svc-redis
---
# Redis deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mds-api-gateway-svc-redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mds-api-gateway-svc-redis
  template:
    metadata:
      labels:
        app: mds-api-gateway-svc-redis
    spec:
      containers:
        - name: mds-api-gateway-svc-redis
          image: "docker.io/redis"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: mds-api-gateway-svc-redis-pvc
---
# API Gateway svc service.
apiVersion: v1
kind: Service
metadata:
  name: mds-api-gateway-svc-service
spec:
  type: ClusterIP
  selector:
    app: mds-api-gateway-svc
  ports:
    - port: 3000
      targetPort: 8080
---
# API Gateway svc deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mds-api-gateway-svc-deployment
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: mds-api-gateway-svc
  template:
    metadata:
      labels:
        app: mds-api-gateway-svc
    spec:
      containers:
        - name: mds-api-gateway-svc
          image: mds-api-gateway-svc
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 31234
              path: /livez
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 31234
              path: /readyz
            timeoutSeconds: 5
