k8s/501_mds-permission-svc.yaml
# Database service.
apiVersion: v1
kind: Service
metadata:
  name: mds-permission-svc-postgres-service
  labels:
    app: mds-permission-svc-postgres-service
spec:
  ports:
    - port: 5432
  selector:
    app: mds-permission-svc-postgres
---
# Database deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mds-permission-svc-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mds-permission-svc-postgres
  template:
    metadata:
      labels:
        app: mds-permission-svc-postgres
    spec:
      containers:
        - name: mds-permission-svc-postgres
          image: postgres:14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: mds-permission-svc-postgres-pvc
---
# Permission svc service.
apiVersion: v1
kind: Service
metadata:
  name: mds-permission-svc-service
spec:
  selector:
    app: mds-permission-svc
  ports:
    - port: 3000
      targetPort: 8080
---
# Permission svc deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mds-permission-svc-deployment
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: mds-permission-svc
  template:
    metadata:
      labels:
        app: mds-permission-svc
    spec:
      containers:
        - name: mds-permission-svc
          image: mds-permission-svc
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 31234
              path: /livez
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 31234
              path: /readyz
            timeoutSeconds: 5
