k8s/530_mds-logistics-svc.yaml
# Database service.
apiVersion: v1
kind: Service
metadata:
  name: mds-logistics-svc-postgres-service
  labels:
    app: mds-logistics-svc-postgres-service
spec:
  ports:
    - port: 5432
  selector:
    app: mds-logistics-svc-postgres
---
# Database deployment.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mds-logistics-svc-postgres-deployment
spec:
  serviceName: mds-logistics-svc-postgres-service
  selector:
    matchLabels:
      app: mds-logistics-svc-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: mds-logistics-svc-postgres
    spec:
      containers:
        - name: mds-logistics-svc-postgres
          image: postgres:14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: mds-logistics-svc-postgres-pvc
---
# Meilisearch service.
apiVersion: v1
kind: Service
metadata:
  name: mds-logistics-svc-meilisearch-service
  labels:
    app.kubernetes.io/name: mds-logistics-svc-meilisearch
    app.kubernetes.io/instance: mds-logistics-svc-meilisearch
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mds-logistics-svc-meilisearch
    app.kubernetes.io/instance: mds-logistics-svc-meilisearch
---
# Meilisearch stateful set.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mds-logistics-svc-meilisearch
  labels:
    app.kubernetes.io/name: mds-logistics-svc-meilisearch
    app.kubernetes.io/instance: mds-logistics-svc-meilisearch
spec:
  replicas: 1
  serviceName: mds-logistics-svc-meilisearch-service
  selector:
    matchLabels:
      app.kubernetes.io/name: mds-logistics-svc-meilisearch
      app.kubernetes.io/instance: mds-logistics-svc-meilisearch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mds-logistics-svc-meilisearch
        app.kubernetes.io/instance: mds-logistics-svc-meilisearch
    spec:
      serviceAccountName: meilisearch
      volumes:
        - name: mds-logistics-svc-meilisearch-v-data
          persistentVolumeClaim:
            claimName: mds-logistics-svc-meilisearch-pvc
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.1.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mds-logistics-svc-meilisearch-v-data
              mountPath: /meili_data
          ports:
            - name: http
              containerPort: 7700
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 60
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 60
            initialDelaySeconds: 60
          resources:
            { }
---
# Logistics svc service.
apiVersion: v1
kind: Service
metadata:
  name: mds-logistics-svc-service
spec:
  selector:
    app: mds-logistics-svc
  ports:
    - port: 3000
      targetPort: 8080
---
# Logistics svc deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mds-logistics-svc-deployment
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: mds-logistics-svc
  template:
    metadata:
      labels:
        app: mds-logistics-svc
    spec:
      containers:
        - name: mds-logistics-svc
          image: mds-logistics-svc
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 31234
              path: /livez
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 31234
              path: /readyz
            timeoutSeconds: 5
