k8s/540_mds-in-app-notifier-svc.yaml
# Database service.
apiVersion: v1
kind: Service
metadata:
  name: mds-in-app-notifier-svc-postgres-service
  labels:
    app: mds-in-app-notifier-svc-postgres-service
spec:
  ports:
    - port: 5432
  selector:
    app: mds-in-app-notifier-svc-postgres
---
# Database deployment.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mds-in-app-notifier-svc-postgres-deployment
spec:
  serviceName: mds-in-app-notifier-svc-postgres-service
  selector:
    matchLabels:
      app: mds-in-app-notifier-svc-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: mds-in-app-notifier-svc-postgres
    spec:
      containers:
        - name: mds-in-app-notifier-svc-postgres
          image: postgres:14.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: mds-in-app-notifier-svc-postgres-pvc
---
# In-app-notifier svc service.
apiVersion: v1
kind: Service
metadata:
  name: mds-in-app-notifier-svc-service
spec:
  selector:
    app: mds-in-app-notifier-svc
  ports:
    - port: 3000
      targetPort: 8080
---
# In-app-notifier svc deployment.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mds-in-app-notifier-svc-deployment
spec:
  serviceName: mds-in-app-notifier-svc-service
  selector:
    matchLabels:
      app: mds-in-app-notifier-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mds-in-app-notifier-svc
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: mds-in-app-notifier-svc
          image: mds-in-app-notifier-svc
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 31234
              path: /livez
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              port: 31234
              path: /readyz
            timeoutSeconds: 5
