k8s/821_internal-ingress.yaml
# Internal ingress.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: internal-nginx
  rules:
    - http:
        paths:
          - path: /users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mds-user-svc-service
                port:
                  number: 3000
          - path: /operations/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mds-operation-svc-service
                port:
                  number: 3000
          - path: /permissions/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mds-permission-svc-service
                port:
                  number: 3000
